[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fish/FishTemplate/FishTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fish/Behaviours/SwimToRandomPtBasedOnRadius/SwimToRandomPtBasedOnRadius.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fish/BootlegFish/BootlegFish.gd" type="Script" id=3]
[ext_resource path="res://Fish/Behaviours/DetectionArea/DetectionArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fish/Behaviours/SteeringBehaviour/SteeringBehaviour.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fish/Behaviours/FishHitBox/FishHitBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fish/BootlegFish/FishSprite.gd" type="Script" id=7]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Bootleg/bootleg left.PNG" type="Texture" id=8]
[ext_resource path="res://Assets/Fishing Scene/Fishes/Bootleg/bootleg right.PNG" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "FacingRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "FacingLeft",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 300.0

[sub_resource type="CircleShape2D" id=3]
radius = 1488.08

[node name="BootlegFish" instance=ExtResource( 1 )]
script = ExtResource( 3 )
amount_needed_to_catch = 75.0
fish_recovery_amount = 0.0
damage = 1

[node name="FishSprite" parent="KinematicBody" index="2"]
frames = SubResource( 1 )
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="KinematicBody/FishSprite" index="0"]

[node name="RippleSprite" parent="KinematicBody" index="3"]
scale = Vector2( 0.3, 0.3 )

[node name="CollisionShape2D" parent="KinematicBody/ProximityArea" index="0"]
shape = SubResource( 2 )

[node name="DetectionArea" parent="KinematicBody" index="6" instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="KinematicBody/DetectionArea" index="0"]
shape = SubResource( 3 )

[node name="SwimToRandomPtBasedOnRadius" parent="KinematicBody" index="7" instance=ExtResource( 2 )]
speed = 100
radius = 1300

[node name="HitBox" parent="KinematicBody" index="8" instance=ExtResource( 6 )]

[node name="SteeringBehaviour" parent="KinematicBody" index="9" instance=ExtResource( 5 )]
max_speed = 500.0
mass = 30.0

[node name="StunnedTimer" type="Timer" parent="." index="3"]
process_mode = 0
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="StunnedTimer" to="." method="_on_StunnedTimer_timeout"]

[editable path="KinematicBody/DetectionArea"]
